fix(YSP-415): no more spinning text
It turns out that GinLB does this animation on purpose it seems.  So we
target the throbber (spinner) and disable the animation.  We also set
the display to inline so that the text displays in a more desirable
location; otherwise the text can be clipped by the other div elements.

--- a/css/admin-theme.css
+++ b/css/admin-theme.css
@@ -168,3 +168,9 @@ foreground. This causes contrast issues.  */
 html:not(.gin--dark-mode) #drupal-off-canvas:not(.drupal-off-canvas-reset).ui-dialog-content div:not([data-drupal-ck-style-fence] *), #drupal-off-canvas-wrapper .ui-dialog-content div:not([data-drupal-ck-style-fence] *) {
   color: var(--color-basic-white);
 }
+
+/* GinLB has a spinning animation of text that we didn't care for. */
+#drupal-off-canvas-wrapper .ajax-progress-throbber {
+  animation: none;
+  display: inline;
+}
